--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,7 @@ p,h1,h3,h4,h5,small,label{
 	position: fixed;
 }
 
-.signin {
-	position:absolute;
-	float: right;
-	z-index:2;
-}
+
 .top-right{
 	display:block;
 }
@@ -51,10 +47,12 @@ ul li{
 	margin-left:15px;
 }
 
-.signin{
+.sign-in{
 	float:right;
 	padding:20px;
 	color:blue;
+	position:absolute;
+	z-index:2;
 }  
 
 .custom-combobox {
