--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,13 @@ ul li{
 #inviteDialog{
 	display:none;
 }
+#js-Invitations label{
+	color:black;
+}
 .js-Notifications .athleteNotes {
 	border: 1px solid black;
 	border-radius:9px;
+}
+.alreadyInvited h2,label{
+	color:black;
 }
