--- a/assets/css/pages/_home-page.scss
+++ b/assets/css/pages/_home-page.scss
@@ -1,4 +1,4 @@
-/* Home-page */
+// Home-page
 
 .signin-splash {
 	h1 {
@@ -7,58 +7,66 @@
 		font-size: 3em;
 		text-align: center;
 	}
+
 	h4 {
 		text-align: center;
 		padding-bottom: 1em;
 		font-weight: 300;
 	}
+
 	form {
 		width: 30%;
 		margin: 0 35%;
 	}
+
 	form select, 
 	form input, 
 	form .submit-btn {
 		margin: 1em 0;
 	}
+
 	form select {
 		width: 100%;
 		height: 30px;
-	    padding:3px;
-	    margin: 0;
-	    text-indent: 10px;
+		padding:3px;
+		margin: 0;
+		text-indent: 10px;
 		@include button-style;
-	    color:#888;
-	    border:none;
-	    outline:none;
-	    display: inline-block;
-	    cursor:pointer;
+		color:#888;
+		border:none;
+		outline:none;
+		display: inline-block;
+		cursor:pointer;
 	}
+
 	form .select-label {
 		position:relative;
 		width: 100%;
 	}
+
 	form .select-label:after {
-	    content:'<>';
-	    font:11px monospace;
-	    color:#aaa;
-	    -webkit-transform:rotate(90deg);
-	    -moz-transform:rotate(90deg);
-	    -ms-transform:rotate(90deg);
-	    transform:rotate(90deg);
-	    right:8px; top:8px;
-	    padding:0 0 2px;
-	    border-bottom:1px solid #ddd;
-	    position:absolute;
-	    pointer-events:none;
+		content:'<>';
+		font:11px monospace;
+		color:#aaa;
+		-webkit-transform:rotate(90deg);
+		-moz-transform:rotate(90deg);
+		-ms-transform:rotate(90deg);
+		transform:rotate(90deg);
+		right:8px; top:8px;
+		padding:0 0 2px;
+		border-bottom:1px solid #ddd;
+		position:absolute;
+		pointer-events:none;
 	}
+
 	form .select-label:before {
-	    content:'';
-	    right:6px; top:0px;
-	    width:20px; height:20px;
-	    background:#f8f8f8;
-	    position:absolute;
-	    pointer-events:none;
-	    display:block;
+		content:'';
+		right:6px; top:0px;
+		width:20px; height:20px;
+		background:#f8f8f8;
+		position:absolute;
+		pointer-events:none;
+		display:block;
 	}
+	
 }
