athlete, footer and homepage styles
footer links tidied up, style added back in for home page (bizarrely
disappeared)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,6 +49,11 @@ ul li {
   color: #ff2518;
 }
 
+.main {
+  width: 600px;
+  margin: 0 auto;
+}
+
 .custom-combobox {
  	display: inline-block;	
   position: relative;
