Some subtle changes to CSS etc...

--- a/assets/css/pages/_home-page.scss
+++ b/assets/css/pages/_home-page.scss
@@ -1,5 +1,9 @@
 // Athlete page
 /* Home-page */
+.homeBG {
+  background: url('../../../assets/images/jumpoff.jpg') no-repeat;
+  background-size: 100%;
+}
 
 .signin-splash {
 	h1 {
