--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -4,7 +4,8 @@
 		clear: both;
 		color: #eee;
 		padding: 1em 0;
-		width: 100%;
+		max-width: 800px;
+		margin:0 auto;
 	.btn,
 		p {
 				margin: 10px;
