--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -93,3 +93,13 @@ ul li {
 .alreadyInvited h2,label{
 	color: black;
 }
+.searchResult{
+	float:left;
+	clear:both;
+}
+.searchResult a img{
+	border: 1px solid black;
+	background-color:#6495ed;
+	max-width:100px;
+	max-height:100px;
+}
