--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,8 +321,10 @@ ul li {
 }
 
 .searchResult a img {
-  border: 1px solid black;
-  background-color: #6495ed;
   max-width: 100px;
   max-height: 100px;
+}
+
+.header-mesg {
+  width: 50%;
 }
